# rustscenic

./: CHANGELOG.md  CITATION.cff  Cargo.toml  QUICKSTART.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: validation_report.yml
.github/workflows/: audit.yml
crates/rustscenic-topics/: Cargo.toml
docs/: atac-preprocessing-scope.md  evaluation-metrics.md  independent-debate.md  landscape-comparison.md  release-gate.md  what-rustscenic-is.md
python/rustscenic/: cistarget.py  cli.py  eregulon.py  pipeline.py  topics.py
python/rustscenic/data/: __init__.py
skills/: rustscenic.md
tests/: test_cistarget.py  test_eregulon.py  test_pipeline_integration.py  test_pipeline_load_tfs.py  test_topics.py
validation/: README.md  VALIDATION_SUMMARY.md
validation/community/: human_brain_10k_v0.4.1.json  kamath_da_grn.json
