[workspace]
resolver = "2"
members = [
    "crates/rustscenic-grn",
    "crates/rustscenic-aucell",
    "crates/rustscenic-topics",
    "crates/rustscenic-preproc",
    "crates/rustscenic-py",
]

[workspace.package]
version = "0.4.2"
edition = "2021"
license = "MIT"
authors = ["Ekin Kahraman"]
repository = "https://github.com/Ekin-Kahraman/rustscenic"

[workspace.dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
rayon = "1.10"
sprs = "0.11"
ndarray = { version = "0.16", features = ["rayon"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
