[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "rustscenic"
version = "0.4.2"
description = "Rust + PyO3 reimplementation of the full SCENIC+ pipeline — GRN, AUCell, topics, cistarget, peak calling, cell QC, enhancer→gene, eRegulon assembly. Installs and runs where arboreto+pyscenic+pycisTopic no longer do."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ekin Kahraman", email = "evk23umu@uea.ac.uk" }]
requires-python = ">=3.10"
keywords = [
    "single-cell", "scRNA-seq", "scATAC-seq", "SCENIC", "SCENIC+",
    "gene regulatory network", "GRN", "transcription factor",
    "regulon", "AUCell", "pycisTopic", "pycistarget",
    "bioinformatics", "computational biology", "Rust", "PyO3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.5",
    "pyarrow>=10",
    "scipy>=1.8",
    # anndata is the central data structure for the SCENIC ecosystem and is
    # imported unconditionally by `rustscenic.pipeline.run`. Keep it core so
    # `pip install rustscenic` produces a working orchestrator.
    "anndata>=0.10",
]

[project.optional-dependencies]
examples = [
    "anndata>=0.10",
    "scanpy>=1.10",
    "igraph>=0.11",
    "leidenalg>=0.10",
]
validation = [
    "anndata>=0.10",
    "scanpy>=1.10",
    "igraph>=0.11",
    "leidenalg>=0.10",
    "scikit-learn>=1.3",
]
# Reference (parity vs the SCENIC ecosystem). Linux-friendly; on macOS the
# canonical reproducible path is the pinned Docker image at validation/reference/Dockerfile.
reference = [
    "anndata>=0.10",
    "scanpy>=1.10",
    "scikit-learn>=1.3",
    # ctxcore 0.2 imports pkg_resources, removed from setuptools 82.
    "setuptools<82",
    "pyscenic>=0.12",
    "arboreto>=0.1.6",
    "ctxcore>=0.2",
]
# Topic-model benchmarks (rustscenic.topics vs tomotopy / gensim LDA).
benchmarks = [
    "anndata>=0.10",
    "scanpy>=1.10",
    "scikit-learn>=1.3",
    "tomotopy>=0.12",
    "gensim>=4.3",
    "psutil>=5.9",
]

[project.scripts]
rustscenic = "rustscenic.cli:main"

[project.urls]
Homepage = "https://github.com/Ekin-Kahraman/rustscenic"
Documentation = "https://github.com/Ekin-Kahraman/rustscenic#readme"
Repository = "https://github.com/Ekin-Kahraman/rustscenic"
Issues = "https://github.com/Ekin-Kahraman/rustscenic/issues"
Changelog = "https://github.com/Ekin-Kahraman/rustscenic/blob/main/CHANGELOG.md"

[tool.maturin]
manifest-path = "crates/rustscenic-py/Cargo.toml"
python-source = "python"
module-name = "rustscenic._rustscenic"
include = [
    { path = "python/rustscenic/data/*.txt", format = ["wheel", "sdist"] },
]
