[package]
name = "rustscenic-topics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ndarray = { workspace = true }
rayon = { workspace = true }
rand = "0.8"
statrs = "0.18"
thiserror = { workspace = true }

[dev-dependencies]
approx = "0.5"
